--- a/src/components/GlobalLayout/Header/Header.module.scss
+++ b/src/components/GlobalLayout/Header/Header.module.scss
@@ -11,20 +11,20 @@
 
   ul {
     margin: 0;
+    margin-top: -50px;
     padding: 0;
     list-style-type: none;
-    margin-left: 120px;
+    margin-left: 200px;
 
     li {
       float: left;
       position: relative;
 
       a {
-        display: block;
         font-size: 1rem;
         text-decoration: none;
         color: #ffffff;
-        padding: 20px;
+        padding: 40px;
         padding-top: 35px;
         padding-bottom: 30px;
 
@@ -39,7 +39,13 @@
 }
 
 .block {
-  display: block;
+  height: 80px;
+  margin-top: -10px;
+  margin-left: 1100px;
+}
+
+.emblem {
+  height: 80px;
 }
 
 .container {
