--- a/src/components/GlobalLayout/Header/Header.module.scss
+++ b/src/components/GlobalLayout/Header/Header.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  font-family: 'Comfortaa', sans-serif;
   display: flex;
   width: 100%;
   background: #005da9;
@@ -9,7 +10,7 @@
     margin-top: 4px;
   }
 
-  ul {
+  .list_header {
     margin: 0;
     margin-top: -50px;
     padding: 0;
