feat: complete global layout

--- a/src/components/GlobalLayout/Footer/Footer.module.scss
+++ b/src/components/GlobalLayout/Footer/Footer.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
-    font-family: 'Comfortaa', sans-serif;
     display: flex;
     width: 100%;
-    background: #005da9;
+    margin-top: auto;
+    background-color: #005da9;
 
     .phrase {
         color: white;
