--- a/src/components/GlobalLayout/Header/Header.module.scss
+++ b/src/components/GlobalLayout/Header/Header.module.scss
@@ -4,38 +4,8 @@
   background: #005da9;
   height: 90px;
   color: #ffffff;
-
-  img {
-    margin-top: 4px;
-  }
-
-  .list_header {
-    margin: 0;
-    margin-top: -50px;
-    padding: 0;
-    list-style-type: none;
-    margin-left: 200px;
-
-    li {
-      float: left;
-      position: relative;
-
-      a {
-        font-size: 1rem;
-        text-decoration: none;
-        color: #ffffff;
-        padding: 40px;
-        padding-top: 35px;
-        padding-bottom: 30px;
-
-        &:hover {
-          background: #3989ec;
-          transition: 0.5s;
-          color: #fff;
-        }
-      }
-    }
-  }
+  justify-content: space-between;
+  padding: 0 20px;
 }
 
 .block {
@@ -54,4 +24,49 @@
 
 .row {
   flex-direction: row;
+}
+
+.image {
+  height: 85px;
+  width: auto;
+}
+
+.element {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  height: 100%;
+  position: relative;
+}
+
+.list {
+  display: flex;
+  gap: 10px;
+  list-style-type: none;
+  height: 100%;
+  justify-content: center;
+
+  li {
+    display: inline-flex;
+    float: left;
+    height: 100%;
+    align-items: center;
+
+    a {
+      font-size: 1rem;
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+      padding: 40px;
+      padding-top: 35px;
+      padding-bottom: 30px;
+      white-space: nowrap;
+      height: 100%;
+
+      &:hover {
+        background: rgb(57, 137, 236);
+        transition: 0.5s;
+        color: #fff;
+      }
+    }
+  }
 }
