--- a/src/components/GlobalLayout/Footer/Footer.module.scss
+++ b/src/components/GlobalLayout/Footer/Footer.module.scss
@@ -1,10 +1,8 @@
 .wrapper {
-    display: flex;
-    width: 100%;
-    margin-top: auto;
-    background-color: #005da9;
-
-    .phrase {
-        color: white;
-    }
+  color: rgb(var(--footer-foreground-rgb));
+  background: rgb(var(--footer-background-rgb));
+  display: flex;
+  width: 100%;
+  margin-top: auto;
+  padding: 10px 20px;
 }
