--- a/src/components/GlobalLayout/Header/Header.module.scss
+++ b/src/components/GlobalLayout/Header/Header.module.scss
@@ -1,72 +1,9 @@
 .wrapper {
-  display: flex;
-  width: 100%;
-  background: #005da9;
-  height: 90px;
-  color: #ffffff;
-  justify-content: space-between;
-  padding: 0 20px;
-}
-
-.block {
-  height: 80px;
-  margin-top: -10px;
-  margin-left: 1100px;
-}
-
-.emblem {
-  height: 80px;
-}
-
-.container {
-  display: flex;
-}
-
-.row {
-  flex-direction: row;
-}
-
-.image {
-  height: 85px;
-  width: auto;
-}
-
-.element {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-  height: 100%;
-  position: relative;
-}
-
-.list {
-  display: flex;
-  gap: 10px;
-  list-style-type: none;
-  height: 100%;
-  justify-content: center;
-
-  li {
-    display: inline-flex;
-    float: left;
-    height: 100%;
-    align-items: center;
-
-    a {
-      font-size: 1rem;
-      text-decoration: none;
-      color: rgb(255, 255, 255);
-      padding: 40px;
-      padding-top: 35px;
-      padding-bottom: 30px;
-      white-space: nowrap;
-      height: 100%;
-
-      &:hover {
-        background: rgb(57, 137, 236);
-        transition: 0.5s;
-        color: #fff;
-      }
-    }
-  }
+    color: rgb(var(--header-foreground-rgb));
+    background: rgb(var(--header-background-rgb));
+    display: flex;
+    width: 100%;
+    height: 90px;
+    justify-content: space-between;
+    padding: 0 20px;
 }
