--- a/src/components/GlobalLayout/Footer/Telegram/Telegram.module.scss
+++ b/src/components/GlobalLayout/Footer/Telegram/Telegram.module.scss
@@ -8,27 +8,27 @@
   }
 
   input {
+    font-family: inherit;
     background-color: rgb(255, 255, 255);
     color: rgb(4, 33, 67);
     border-radius: 9px;
     vertical-align: top;
     word-wrap: break-word;
-    height: 57px;
-    width: 100%;
     font-size: 15px;
     padding: 10px;
     margin: 5px 0;
   }
 
   .button {
+    font-family: inherit;
+    font-size: 13px;
     background-color: rgb(0, 93, 169);
     border: 1px solid rgb(57, 137, 236);
     color: rgb(255, 255, 255);
     border-radius: 6px;
-    width: 85px;
-    height: 25px;
+    width: fit-content;
+    padding: 10px;
     margin-top: 5px;
-    font-size: 15px;
     transition: all .3s;
   }
 
