--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -1,4 +1,18 @@
-.main {
+.wrapper {
   display: flex;
   flex-direction: column;
+  margin: 20px;
+
+  h1 {
+    align-self: center;
+  }
+
+  .text {
+    padding: 10px 90px;
+    margin-top: 30px;
+  }
+
+  .image {
+    align-self: center;
+  }
 }
