changed icons in footer contacts

--- a/src/components/GlobalLayout/Footer/Telegram/Telegram.module.scss
+++ b/src/components/GlobalLayout/Footer/Telegram/Telegram.module.scss
@@ -17,6 +17,9 @@
     font-size: 15px;
     padding: 10px;
     margin: 5px 0;
+    outline: none;
+    border: none;
+    box-shadow: none;
   }
 
   .button {
