--- a/src/components/GlobalLayout/Footer/Contacts/Contacts.module.scss
+++ b/src/components/GlobalLayout/Footer/Contacts/Contacts.module.scss
@@ -11,12 +11,14 @@
     width: 100%;
 
     .a {
+      display: flex;
+      flex-direction: row;
       margin-bottom: 7px;
       transition: all .5s;
 
-      .icon {
-        width: 17px;
-        height: auto;
+      .text {
+        padding-top: 3px;
+        padding-left: 5px;
       }
     }
   }
@@ -26,12 +28,11 @@
   }
 
   .socials2 {
+    display: flex;
+    flex-direction: row;
+
     .icon {
-      border: 1px solid rgb(57, 137, 236);
-      border-radius: 9px;
-      width: 45px;
-      height: 45px;
-      padding: 10px 10px;
+      padding: 7px 7px;
       margin-top: 15px;
       margin-bottom: 5px;
       margin-right: 8px;
@@ -39,7 +40,9 @@
     }
 
     .icon:hover {
-      border: 1px solid white;
+      border: 1.3px solid rgb(255, 255, 255);
+      border-radius: 9px;
+      transition: all .5s;
     }
   }
 }
