--- a/src/widgets/layouts/global/ui/PageWrapper/Header/BurgerMenu/BurgerMenu.module.scss
+++ b/src/widgets/layouts/global/ui/PageWrapper/Header/BurgerMenu/BurgerMenu.module.scss
@@ -1,20 +1,29 @@
 .wrapper {
   position: relative;
 
+  .list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    list-style-type: none;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+
+    .listItem {
+      padding: 12px 16px;
+      background-color: rgba(var(--foreground-rgb), 0.9);
+      text-decoration: none;
+      display: block;
+
+      &:hover {
+        background-color: rgba(var(--foreground-rgb), 1.1);
+      }
+    }
+  }
+
   &:hover .list {
     display: block;
   }
-}
-
-.list {
-  display: none;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  list-style-type: none;
-}
-
-.listItem {
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.2);
 }
