--- a/src/widgets/layouts/global/ui/theme/globals.scss
+++ b/src/widgets/layouts/global/ui/theme/globals.scss
@@ -2,31 +2,31 @@
   @import 'react-toastify/dist/ReactToastify.css';
   @import './custom-scroll.scss';
 
-  --header-height: 170px;
+  --header-height: 8.854166666666666vw;
+  --border-radius-xl: 1.0416666666666667vw;
+  --border-radius-lg: 0.625vw;
+  --border-radius-md: 0.5208333333333334vw;
+  --border-radius-sm: 0.4166666666666667vw;
+  --border-radius-xs: 0.3125vw;
 
-  --border-radius-xl: 20px;
-  --border-radius-lg: 12px;
-  --border-radius-md: 10px;
-  --border-radius-sm: 8px;
-  --border-radius-xs: 6px;
+  --padding-xl: 1.6666666666666667vw;
+  --padding-lg: 1.4583333333333333vw;
+  --padding-md: 0.8333333333333334vw;
+  --padding-sm: 0.4166666666666667vw;
+  --padding-xs: 0.20833333333333334vw;
 
-  --padding-xl: 32px;
-  --padding-lg: 28px;
-  --padding-md: 16px;
-  --padding-sm: 8px;
-  --padding-xs: 4px;
+  --font-size-xl: 1.875vw;
+  --font-size-lg: 1.3541666666666667vw;
+  --font-size-md: 1.0416666666666667vw;
+  --font-size-sm: 0.8333333333333334vw;
+  --font-size-xs: 0.7291666666666666vw;
 
-  --font-size-xl: 36px;
-  --font-size-lg: 26px;
-  --font-size-md: 20px;
-  --font-size-sm: 16px;
-  --font-size-xs: 14px;
+  --line-heights-xl: 2.2916666666666665vw;
+  --line-heights-lg: 1.875vw;
+  --line-heights-md: 1.4583333333333333vw;
+  --line-heights-sm: 1.25vw;
+  --line-heights-xs: 1.09375vw;
 
-  --line-heights-xl: 44px;
-  --line-heights-lg: 36px;
-  --line-heights-md: 28px;
-  --line-heights-sm: 24px;
-  --line-heights-xs: 21px;
 
 
   --max-width: 1100px;
@@ -38,7 +38,8 @@
 
 
 
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 0, 93, 169;
+  --background-rgb: 255, 255, 255;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
@@ -69,9 +70,10 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 0, 93, 169;
+    --background-rgb: 255, 255, 255;
+    --background-start-rgb: 255, 255, 255;
+    --background-end-rgb: 255, 255, 255;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(to bottom right,
