--- a/src/entities/ui/TextField/TextField.module.scss
+++ b/src/entities/ui/TextField/TextField.module.scss
@@ -1,8 +1,8 @@
 .wrapper {
   display: flex;
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius:  var(--border-radius-sm);
-  background-color: rgba(var(--callout-rgb), 0.5);
+  border: 0.110vw solid rgba(var(--foreground-rgb));
+  border-radius: var(--border-radius-md);
+  background-color: rgba(var(--background-rgb));
   padding: var(--padding-sm) var(--padding-md);
   color: rgb(var(--foreground-rgb));
 }
