--- a/src/entities/components/UserIcon/ui/UserIcon.module.scss
+++ b/src/entities/components/UserIcon/ui/UserIcon.module.scss
@@ -3,13 +3,12 @@
   align-items: center;
   justify-content: center;
   font-size: 18px;
-  font-weight: 700;
   line-height: 24px;
   text-align: center;
   color: var(--dark-30);
   border: var(--border-width) solid var(--dark-20);
-  border-radius: 50%;
-  width: 40px;
+  border-radius: var(--radius-sm);
+  width: 150px;
   height: 40px;
   cursor: pointer;
 }
