--- a/src/entities/components/Table/Text/Text.module.scss
+++ b/src/entities/components/Table/Text/Text.module.scss
@@ -2,4 +2,7 @@
   max-height: 40px;
   text-overflow: ellipsis;
   overflow: hidden;
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 8px;
 }
