--- a/src/entities/components/cards/coaches/ui/CoachesCard.module.scss
+++ b/src/entities/components/cards/coaches/ui/CoachesCard.module.scss
@@ -9,17 +9,15 @@
 .imageWrapper {
   display: flex;
   position: relative;
-  width: 100%;
-  height: auto;
-  aspect-ratio: 307 / 180;
+  width: 50%;
   border-radius: var(--radius-md) var(--radius-md) 0 0;
   overflow: hidden;
 }
 
 .image {
-  object-fit: cover;
+  object-fit: contain;
   border-radius: var(--radius-md) var(--radius-md) 0 0;
-  width: 100%;
+  max-height: 500px;
 }
 
 .timeStamp {
