--- a/src/entities/components/Select/ui/Select.module.scss
+++ b/src/entities/components/Select/ui/Select.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 2px;
-  z-index: 3;
+  z-index: 30;
 }
 
 .label {
@@ -49,6 +49,8 @@
 
 .menu {
   border-radius: var(--radius-sm) !important;
+  position: absolute;
+  z-index: 3;
 }
 
 .option {
