--- a/src/entities/components/cards/titles/ui/TitlesCard.module.scss
+++ b/src/entities/components/cards/titles/ui/TitlesCard.module.scss
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   padding: 14px;
-  height: 120px;
+  height: 100px;
   gap: 4px;
   justify-content: center;
 }
 
 .timeStamp {
-  position: absolute;
+  position: relative;
   top: 12px;
   left: 9px;
   z-index: 2;
