--- a/src/entities/components/Table/Select/ui/Select.module.scss
+++ b/src/entities/components/Table/Select/ui/Select.module.scss
@@ -68,7 +68,7 @@
   box-shadow: none !important;
   margin: 0 !important;
   padding: 16px;
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
 }
 
 .option {
