--- a/src/entities/components/Cover/ui/Cover.module.scss
+++ b/src/entities/components/Cover/ui/Cover.module.scss
@@ -17,7 +17,7 @@
   position: absolute;
   top: 3px;
   right: 3px;
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
   border-radius: 50%;
   cursor: pointer;
 }
