--- a/src/entities/components/MenuItem/NavItem/ui/NavItem.module.scss
+++ b/src/entities/components/MenuItem/NavItem/ui/NavItem.module.scss
@@ -25,7 +25,7 @@
 
 .navLink {
   transition: fill var(--animation-duration) ease;
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
   z-index: 2;
 
   &:hover {
