--- a/src/entities/components/QuillEditor/ui/Editor/QuillEditor.module.scss
+++ b/src/entities/components/QuillEditor/ui/Editor/QuillEditor.module.scss
@@ -11,7 +11,7 @@
   gap: 8px;
   border: var(--border-width) solid var(--dark-20);
   border-radius: var(--radius-sm);
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
 
   &.error {
     border-color: var(--red-100);
