--- a/src/entities/components/modal/ui/Modal.module.scss
+++ b/src/entities/components/modal/ui/Modal.module.scss
@@ -39,7 +39,7 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
   border-radius: 50%;
   cursor: pointer;
 }
