--- a/src/shared/ui/TextField/TextField.module.scss
+++ b/src/shared/ui/TextField/TextField.module.scss
@@ -28,7 +28,7 @@
   gap: 8px;
   border: var(--border-width) solid var(--dark-20);
   border-radius: var(--radius-sm);
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
   overflow: hidden;
 
   &.error {
