--- a/src/widgets/layouts/MainLayout/ui/MainLayout.module.scss
+++ b/src/widgets/layouts/MainLayout/ui/MainLayout.module.scss
@@ -9,14 +9,14 @@
 
 .header {
   grid-column: 1 / -1;
-  background: var(--white-100);
+  background: var(--dark-100);
   position: relative;
 }
 
 .sidebar {
   position: relative;
   grid-row: 2 / 4;
-  background: var(--white-100);
+  background: var(--dark-100);
   width: var(--nav-bar-width);
   border-right: var(--border-width) solid var(--dark-20);
   height: 100%;
@@ -62,7 +62,7 @@
 
 .popup {
   position: absolute;
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
   border: var(--border-width) solid var(--dark-20);
   border-top: none;
   border-radius: 0 0 var(--radius-md) var(--radius-md);
