--- a/src/widgets/news/Slider/ui/Slider.module.scss
+++ b/src/widgets/news/Slider/ui/Slider.module.scss
@@ -7,7 +7,7 @@
 
 .icon {
   border-radius: 50%;
-  background-color: var(--white-100);
+  background-color: var(--dark-100);
   display: flex;
   align-items: center;
   justify-content: center;
