deleted light theme

--- a/src/app/styles/lib/datapicker.scss
+++ b/src/app/styles/lib/datapicker.scss
@@ -47,7 +47,7 @@
   &:hover {
     border-radius: 50%;
     background-color: var(--primary-100);
-    color: var(--white-100);
+    color: var(--dark-100);
   }
 }
 
@@ -94,7 +94,7 @@
 
   &:hover {
     background-color: var(--primary-semi-dark) !important;
-    color: var(--white-100);
+    color: var(--dark-100);
   }
 }
 
