--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -70,8 +70,8 @@
 }
 
 .light {
-  background-color: var(--gray-10);
-  color: var(--dark-80);
+  background-color: var(--dark-90);
+  color: var(--white-100);
 
   path {
     fill: var(--dark-80);
