--- a/src/shared/ui/TextField/TextField.module.scss
+++ b/src/shared/ui/TextField/TextField.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 2px;
+  background-color: var(--dark-100);
+  padding: 5px;
+  border-radius: 10px;
 }
 
 .input {
@@ -12,6 +15,8 @@
   width: 100%;
   height: 28px;
   padding: 4px 0;
+  background-color: var(--dark-100);
+  color: var(--white-100);
 
   &::placeholder {
     color: var(--dark-60);
@@ -26,9 +31,8 @@
   align-items: center;
   padding: 10px 12px;
   gap: 8px;
-  border: var(--border-width) solid var(--dark-20);
+  border: var(--border-width) solid var(--dark-80);
   border-radius: var(--radius-sm);
-  background-color: var(--dark-100);
   overflow: hidden;
 
   &.error {
