--- a/src/app/styles/colors/dark/index.scss
+++ b/src/app/styles/colors/dark/index.scss
@@ -1,5 +1,6 @@
 :root {
-  --dark-100-rgb: 32, 22, 0;
+  --dark-100-rgb: 20, 20, 20;
+  --dark-90-rgb: 40, 40, 40;
   --dark-80-rgb: 51, 51, 51;
   --dark-70-rgb: 90, 87, 78;
   --dark-60-rgb: 135, 129, 117;
@@ -8,6 +9,7 @@
   --dark-20-rgb: 228, 225, 221;
   --dark-10-rgb: 247, 246, 245;
   --dark-100: rgb(var(--dark-100-rgb));
+  --dark-90: rgb(var(--dark-90-rgb));
   --dark-80: rgb(var(--dark-80-rgb));
   --dark-70: rgb(var(--dark-70-rgb));
   --dark-60: rgb(var(--dark-60-rgb));
