--- a/src/widgets/layouts/MainLayout/ui/MainLayout.module.scss
+++ b/src/widgets/layouts/MainLayout/ui/MainLayout.module.scss
@@ -18,7 +18,7 @@
   grid-row: 2 / 4;
   background: var(--dark-100);
   width: var(--nav-bar-width);
-  border-right: var(--border-width) solid var(--dark-20);
+  border-right: var(--border-width) solid var(--dark-100);
   height: 100%;
   overflow: auto;
 
@@ -28,6 +28,8 @@
 }
 
 .content {
+  background: var(--dark-90);
+  color: var(--dark-20);
   position: relative;
   grid-column: 2;
   grid-row: 2;
@@ -63,7 +65,7 @@
 .popup {
   position: absolute;
   background-color: var(--dark-100);
-  border: var(--border-width) solid var(--dark-20);
+  border: var(--border-width) solid var(--dark-100);
   border-top: none;
   border-radius: 0 0 var(--radius-md) var(--radius-md);
   right: 0;
